// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`observe & intercept 1`] = `
[
  {
    "intercept": {
      "name": "b",
      "newValue": {
        "title": "get tea",
      },
      "object": {
        "a": {
          "title": "get coffee",
        },
      },
      "type": "add",
    },
  },
  {
    "intercept": {
      "name": "a",
      "object": {
        "a": {
          "title": "get coffee",
        },
      },
      "type": "remove",
    },
  },
]
`;

exports[`observe & intercept 2`] = `
[
  {
    "observe": {
      "debugObjectName": "TestObject",
      "name": "b",
      "newValue": {
        "title": "get tea",
      },
      "object": {
        "b": {
          "title": "get tea",
        },
      },
      "observableKind": "object",
      "type": "add",
    },
  },
  {
    "observe": {
      "debugObjectName": "TestObject",
      "name": "a",
      "object": {
        "b": {
          "title": "get tea",
        },
      },
      "observableKind": "object",
      "oldValue": {
        "title": "get coffee",
      },
      "type": "remove",
    },
  },
]
`;
